--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,28 +1,27 @@
-body{
-    margin:0;
-    padding:0;
-    font-family: Arial, sans-serif; 
-
-}
-
-.nav-bar {
-    background-color: #8587cf;
-    color: white;
-    padding: 10px;
-}
-
-.nav-bar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+nav {
+    width: 100%;
+    height: 80px;
+    background: linear-gradient(to bottom, #ffffff, #d7ffda);
+    position: fixed;
+  }
+  ul {
+    height: 100%;
+  
     display: flex;
-    
-}
-
-.nav-bar ul li{
+    justify-content: flex-end;
+    align-items: center;
+    gap: 36px;
     list-style-type: none;
-    margin: 4px;
-    padding: 2px, 4px;
-    display: flex;
-    
-}
+    padding: 0 80px 0 80px;
+    border-bottom: 0.4px solid rgb(0, 0, 0);
+  }
+  ul li a {
+    text-decoration: none;
+  }
+  nav ul li a {
+    font-size: 16px !important;
+    font-weight: 600;
+  }
+  nav ul li a:hover {
+    color: var(--primary-color);
+  }
